SUBDIRS = docs

doc_DATA = \
	README.txt \
	CHANGELOG.txt

pkgdata_DATA = \
	bin/data/README.txt

rulesetdir =  $(pkgdatadir)/Ruleset
ruleset_DATA = \
	bin/data/Ruleset/Xcom1Ruleset.rul

languagedir = $(pkgdatadir)/Language
language_DATA = \
	bin/data/Language/Big.fnt \
	bin/data/Language/Czech.geo \
	bin/data/Language/Czech.lng \
	bin/data/Language/English.geo \
	bin/data/Language/English.lng \
	bin/data/Language/EnglishUk.geo \
	bin/data/Language/EnglishUk.lng \
	bin/data/Language/Font.dat \
	bin/data/Language/French.geo \
	bin/data/Language/French.lng \
	bin/data/Language/German.geo \
	bin/data/Language/German.lng \
	bin/data/Language/Hungarian.geo \
	bin/data/Language/Hungarian.lng \
	bin/data/Language/Italian.geo \
	bin/data/Language/Italian.lng \
	bin/data/Language/Polish.geo \
	bin/data/Language/Polish.lng \
	bin/data/Language/Romanian.geo \
	bin/data/Language/Romanian.lng \
	bin/data/Language/Russian.geo \
	bin/data/Language/Russian.lng \
	bin/data/Language/Small.fnt \
	bin/data/Language/Spanish.geo \
	bin/data/Language/Spanish.lng \
	bin/data/Language/Ukranian.geo \
	bin/data/Language/Ukranian.lng

namedir = $(pkgdatadir)/SoldierName
name_DATA = \
	bin/data/SoldierName/American.nam \
	bin/data/SoldierName/British.nam \
	bin/data/SoldierName/Czech.nam \
	bin/data/SoldierName/Danish.nam \
	bin/data/SoldierName/Finnish.nam \
	bin/data/SoldierName/French.nam \
	bin/data/SoldierName/German.nam \
	bin/data/SoldierName/Hungarian.nam \
	bin/data/SoldierName/Italian.nam \
	bin/data/SoldierName/Japanese.nam \
	bin/data/SoldierName/Polish.nam \
	bin/data/SoldierName/Portuguese.nam \
	bin/data/SoldierName/Romanian.nam \
	bin/data/SoldierName/Russian.nam \
	bin/data/SoldierName/Spanish.nam \
	bin/data/SoldierName/Swedish.nam

bin_PROGRAMS = openxcom
openxcom_LDADD = $(SDL_LIBS) $(YAML_LIBS)
openxcom_CXXFLAGS = \
	$(CFLAGS) \
	$(DEBUG_CFLAGS) \
	$(SDL_CFLAGS) \
	$(YAML_CFLAGS) \
	-DDATADIR=\"$(pkgdatadir)/\"
openxcom_SOURCES = \
	src/Basescape/BaseInfoState.cpp \
	src/Basescape/BaseInfoState.h \
	src/Basescape/BasescapeState.cpp \
	src/Basescape/BasescapeState.h \
	src/Basescape/BaseView.cpp \
	src/Basescape/BaseView.h \
	src/Basescape/BuildFacilitiesState.cpp \
	src/Basescape/BuildFacilitiesState.h \
	src/Basescape/CraftArmorState.cpp \
	src/Basescape/CraftArmorState.h \
	src/Basescape/CraftEquipmentState.cpp \
	src/Basescape/CraftEquipmentState.h \
	src/Basescape/CraftInfoState.cpp \
	src/Basescape/CraftInfoState.h \
	src/Basescape/CraftSoldiersState.cpp \
	src/Basescape/CraftSoldiersState.h \
	src/Basescape/CraftsState.cpp \
	src/Basescape/CraftsState.h \
	src/Basescape/CraftWeaponsState.cpp \
	src/Basescape/CraftWeaponsState.h \
	src/Basescape/DismantleFacilityState.cpp \
	src/Basescape/DismantleFacilityState.h \
	src/Basescape/ManufactureInfoState.cpp \
	src/Basescape/ManufactureInfoState.h \
	src/Basescape/ManufactureStartState.cpp \
	src/Basescape/ManufactureStartState.h \
	src/Basescape/ManufactureState.cpp \
	src/Basescape/ManufactureState.h \
	src/Basescape/MiniBaseView.cpp \
	src/Basescape/MiniBaseView.h \
	src/Basescape/MonthlyCostsState.cpp \
	src/Basescape/MonthlyCostsState.h \
	src/Basescape/NewManufactureListState.cpp \
	src/Basescape/NewManufactureListState.h \
	src/Basescape/NewResearchListState.cpp \
	src/Basescape/NewResearchListState.h \
	src/Basescape/PlaceFacilityState.cpp \
	src/Basescape/PlaceFacilityState.h \
	src/Basescape/PlaceLiftState.cpp \
	src/Basescape/PlaceLiftState.h \
	src/Basescape/PlaceStartFacilityState.cpp \
	src/Basescape/PlaceStartFacilityState.h \
	src/Basescape/SelectStartFacilityState.cpp \
	src/Basescape/SelectStartFacilityState.h \
	src/Basescape/PurchaseState.cpp \
	src/Basescape/PurchaseState.h \
	src/Basescape/ResearchInfoState.cpp \
	src/Basescape/ResearchInfoState.h \
	src/Basescape/ResearchState.cpp \
	src/Basescape/ResearchState.h \
	src/Basescape/SellState.cpp \
	src/Basescape/SellState.h \
	src/Basescape/SoldierArmorState.cpp \
	src/Basescape/SoldierArmorState.h \
	src/Basescape/SoldierInfoState.cpp \
	src/Basescape/SoldierInfoState.h \
	src/Basescape/SoldiersState.cpp \
	src/Basescape/SoldiersState.h \
	src/Basescape/StoresState.cpp \
	src/Basescape/StoresState.h \
	src/Basescape/TransferBaseState.cpp \
	src/Basescape/TransferBaseState.h \
	src/Basescape/TransferConfirmState.cpp \
	src/Basescape/TransferConfirmState.h \
	src/Basescape/TransferItemsState.cpp \
	src/Basescape/TransferItemsState.h \
	src/Basescape/TransfersState.cpp \
	src/Basescape/TransfersState.h \
	src/Battlescape/AbortMissionState.cpp \
	src/Battlescape/AbortMissionState.h \
	src/Battlescape/ActionMenuItem.cpp \
	src/Battlescape/ActionMenuItem.h \
	src/Battlescape/ActionMenuState.cpp \
	src/Battlescape/ActionMenuState.h \
	src/Battlescape/AggroBAIState.cpp \
	src/Battlescape/AggroBAIState.h \
	src/Battlescape/BattleAIState.cpp \
	src/Battlescape/BattleAIState.h \
	src/Battlescape/BattlescapeGame.cpp \
	src/Battlescape/BattlescapeGame.h \
	src/Battlescape/BattlescapeGenerator.cpp \
	src/Battlescape/BattlescapeGenerator.h \
	src/Battlescape/BattlescapeMessage.cpp \
	src/Battlescape/BattlescapeMessage.h \
	src/Battlescape/BattlescapeOptionsState.cpp \
	src/Battlescape/BattlescapeOptionsState.h \
	src/Battlescape/BattlescapeState.cpp \
	src/Battlescape/BattlescapeState.h \
	src/Battlescape/BattleState.cpp \
	src/Battlescape/BattleState.h \
	src/Battlescape/BriefingState.cpp \
	src/Battlescape/BriefingState.h \
	src/Battlescape/BulletSprite.cpp \
	src/Battlescape/BulletSprite.h \
	src/Battlescape/Camera.cpp \
	src/Battlescape/Camera.h \
	src/Battlescape/DebriefingState.cpp \
	src/Battlescape/DebriefingState.h \
	src/Battlescape/ExplosionBState.cpp \
	src/Battlescape/ExplosionBState.h \
	src/Battlescape/Explosion.cpp \
	src/Battlescape/Explosion.h \
	src/Battlescape/InfoboxOKState.cpp \
	src/Battlescape/InfoboxOKState.h \
	src/Battlescape/Inventory.cpp \
	src/Battlescape/Inventory.h \
	src/Battlescape/InventoryState.cpp \
	src/Battlescape/InventoryState.h \
	src/Battlescape/Map.cpp \
	src/Battlescape/Map.h \
	src/Battlescape/MiniMapState.cpp \
	src/Battlescape/MiniMapState.h \
	src/Battlescape/MiniMapView.cpp \
	src/Battlescape/MiniMapView.h \
	src/Battlescape/NextTurnState.cpp \
	src/Battlescape/NextTurnState.h \
	src/Battlescape/Pathfinding.cpp \
	src/Battlescape/Pathfinding.h \
	src/Battlescape/PathfindingNode.cpp \
	src/Battlescape/PathfindingNode.h \
	src/Battlescape/PathfindingOpenSet.cpp \
	src/Battlescape/PathfindingOpenSet.h \
	src/Battlescape/PatrolBAIState.cpp \
	src/Battlescape/PatrolBAIState.h \
	src/Battlescape/Position.cpp \
	src/Battlescape/Position.h \
	src/Battlescape/PrimeGrenadeState.cpp \
	src/Battlescape/PrimeGrenadeState.h \
	src/Battlescape/ProjectileFlyBState.cpp \
	src/Battlescape/ProjectileFlyBState.h \
	src/Battlescape/Projectile.cpp \
	src/Battlescape/Projectile.h \
	src/Battlescape/PromotionsState.cpp \
	src/Battlescape/PromotionsState.h \
	src/Battlescape/UnitInfoState.cpp \
	src/Battlescape/UnitInfoState.h \
	src/Battlescape/UnitSprite.cpp \
	src/Battlescape/UnitSprite.h \
	src/Battlescape/UnitTurnBState.cpp \
	src/Battlescape/UnitTurnBState.h \
	src/Battlescape/UnitWalkBState.cpp \
	src/Battlescape/UnitWalkBState.h \
	src/Battlescape/WarningMessage.cpp \
	src/Battlescape/WarningMessage.h \
	src/Battlescape/TileEngine.cpp \
	src/Battlescape/TileEngine.h \
	src/Battlescape/UnitDieBState.cpp \
	src/Battlescape/UnitDieBState.h \
	src/Battlescape/InfoboxState.cpp \
	src/Battlescape/InfoboxState.h \
	src/Battlescape/MedikitView.cpp \
	src/Battlescape/MedikitView.h \
	src/Battlescape/MedikitState.cpp \
	src/Battlescape/MedikitState.h \
	src/Battlescape/ScannerView.cpp \
	src/Battlescape/ScannerView.h \
	src/Battlescape/ScannerState.cpp \
	src/Battlescape/ScannerState.h \
	src/Battlescape/CannotReequipState.cpp \
	src/Battlescape/CannotReequipState.h \
	src/dirent.h \
	src/Engine/Action.cpp \
	src/Engine/Action.h \
	src/Engine/CatFile.cpp \
	src/Engine/CatFile.h \
	src/Engine/CrossPlatform.cpp \
	src/Engine/CrossPlatform.h \
	src/Engine/Exception.cpp \
	src/Engine/Exception.h \
	src/Engine/Font.cpp \
	src/Engine/Font.h \
	src/Engine/Game.cpp \
	src/Engine/Game.h \
	src/Engine/GMCat.cpp \
	src/Engine/GMCat.h \
	src/Engine/InteractiveSurface.cpp \
	src/Engine/InteractiveSurface.h \
	src/Engine/Language.cpp \
	src/Engine/Language.h \
	src/Engine/Logger.h \
	src/Engine/Music.cpp \
	src/Engine/Music.h \
	src/Engine/Options.cpp \
	src/Engine/Options.h \
	src/Engine/Palette.cpp \
	src/Engine/Palette.h \
	src/Engine/RNG.cpp \
	src/Engine/RNG.h \
	src/Engine/Screen.cpp \
	src/Engine/Screen.h \
	src/Engine/Sound.cpp \
	src/Engine/Sound.h \
	src/Engine/SoundSet.cpp \
	src/Engine/SoundSet.h \
	src/Engine/State.cpp \
	src/Engine/State.h \
	src/Engine/Surface.cpp \
	src/Engine/Surface.h \
	src/Engine/SurfaceSet.cpp \
	src/Engine/SurfaceSet.h \
	src/Engine/Timer.cpp \
	src/Engine/Timer.h \
	src/Geoscape/AbandonGameState.cpp \
	src/Geoscape/AbandonGameState.h \
	src/Geoscape/AlienTerrorState.cpp \
	src/Geoscape/AlienTerrorState.h \
	src/Geoscape/BaseNameState.cpp \
	src/Geoscape/BaseNameState.h \
	src/Geoscape/BuildNewBaseState.cpp \
	src/Geoscape/BuildNewBaseState.h \
	src/Geoscape/CraftErrorState.cpp \
	src/Geoscape/CraftErrorState.h \
	src/Geoscape/ConfirmDestinationState.cpp \
	src/Geoscape/ConfirmDestinationState.h \
	src/Geoscape/ConfirmLandingState.cpp \
	src/Geoscape/ConfirmLandingState.h \
	src/Geoscape/ConfirmNewBaseState.cpp \
	src/Geoscape/ConfirmNewBaseState.h \
	src/Geoscape/CraftPatrolState.cpp \
	src/Geoscape/CraftPatrolState.h \
	src/Geoscape/DogfightState.cpp \
	src/Geoscape/DogfightState.h \
	src/Geoscape/FundingState.cpp \
	src/Geoscape/FundingState.h \
	src/Geoscape/GeoscapeCraftState.cpp \
	src/Geoscape/GeoscapeCraftState.h \
	src/Geoscape/GeoscapeState.cpp \
	src/Geoscape/GeoscapeState.h \
	src/Geoscape/Globe.cpp \
	src/Geoscape/Globe.h \
	src/Geoscape/GraphsState.cpp \
	src/Geoscape/GraphsState.h \
	src/Geoscape/InterceptState.cpp \
	src/Geoscape/InterceptState.h \
	src/Geoscape/ItemsArrivingState.cpp \
	src/Geoscape/ItemsArrivingState.h \
	src/Geoscape/LowFuelState.cpp \
	src/Geoscape/LowFuelState.h \
	src/Geoscape/MonthlyReportState.cpp \
	src/Geoscape/MonthlyReportState.h \
	src/Geoscape/MultipleTargetsState.cpp \
	src/Geoscape/MultipleTargetsState.h \
	src/Geoscape/NewPossibleManufactureState.cpp \
	src/Geoscape/NewPossibleManufactureState.h \
	src/Geoscape/NewPossibleResearchState.cpp \
	src/Geoscape/NewPossibleResearchState.h \
	src/Geoscape/GeoscapeOptionsState.cpp \
	src/Geoscape/GeoscapeOptionsState.h \
	src/Geoscape/Polygon.cpp \
	src/Geoscape/Polygon.h \
	src/Geoscape/Polyline.cpp \
	src/Geoscape/Polyline.h \
	src/Geoscape/ProductionCompleteState.cpp \
	src/Geoscape/ProductionCompleteState.h \
	src/Geoscape/ResearchCompleteState.cpp \
	src/Geoscape/ResearchCompleteState.h \
	src/Geoscape/SelectDestinationState.cpp \
	src/Geoscape/SelectDestinationState.h \
	src/Geoscape/TargetInfoState.cpp \
	src/Geoscape/TargetInfoState.h \
	src/Geoscape/UfoDetectedState.cpp \
	src/Geoscape/UfoDetectedState.h \
	src/Geoscape/UfoLostState.cpp \
	src/Geoscape/UfoLostState.h \
	src/Interface/ArrowButton.cpp \
	src/Interface/ArrowButton.h \
	src/Interface/Bar.cpp \
	src/Interface/Bar.h \
	src/Interface/Cursor.cpp \
	src/Interface/Cursor.h \
	src/Interface/FpsCounter.cpp \
	src/Interface/FpsCounter.h \
	src/Interface/ImageButton.cpp \
	src/Interface/ImageButton.h \
	src/Interface/NumberText.cpp \
	src/Interface/NumberText.h \
	src/Interface/TextButton.cpp \
	src/Interface/TextButton.h \
	src/Interface/Text.cpp \
	src/Interface/TextEdit.cpp \
	src/Interface/TextEdit.h \
	src/Interface/Text.h \
	src/Interface/TextList.cpp \
	src/Interface/TextList.h \
	src/Interface/Window.cpp \
	src/Interface/Window.h \
	src/lodepng.cpp \
	src/lodepng.h \
	src/main.cpp \
	src/Menu/ErrorMessageState.cpp \
	src/Menu/ErrorMessageState.h \
	src/Menu/LanguageState.cpp \
	src/Menu/LanguageState.h \
	src/Menu/LoadState.cpp \
	src/Menu/LoadState.h \
	src/Menu/MainMenuState.cpp \
	src/Menu/MainMenuState.h \
	src/Menu/NewBattleState.cpp \
	src/Menu/NewBattleState.h \
	src/Menu/NewGameState.cpp \
	src/Menu/NewGameState.h \
	src/Menu/NoteState.cpp \
	src/Menu/NoteState.h \
	src/Menu/OptionsState.cpp \
	src/Menu/OptionsState.h \
	src/Menu/SaveState.cpp \
	src/Menu/SaveState.h \
	src/Menu/SavedGameState.cpp \
	src/Menu/SavedGameState.h \
	src/Menu/StartState.cpp \
	src/Menu/StartState.h \
	src/Menu/TestState.cpp \
	src/Menu/TestState.h \
	src/Resource/ResourcePack.cpp \
	src/Resource/ResourcePack.h \
	src/Resource/XcomResourcePack.cpp \
	src/Resource/XcomResourcePack.h \
	src/Ruleset/ArticleDefinition.cpp \
	src/Ruleset/ArticleDefinition.h \
	src/Ruleset/City.cpp \
	src/Ruleset/City.h \
	src/Ruleset/MapBlock.cpp \
	src/Ruleset/MapBlock.h \
	src/Ruleset/MapData.cpp \
	src/Ruleset/MapData.h \
	src/Ruleset/MapDataSet.cpp \
	src/Ruleset/MapDataSet.h \
	src/Ruleset/AlienDeployment.cpp \
	src/Ruleset/AlienDeployment.h \
	src/Ruleset/AlienRace.cpp \
	src/Ruleset/AlienRace.h \
	src/Ruleset/Armor.cpp \
	src/Ruleset/Armor.h \
	src/Ruleset/Unit.cpp \
	src/Ruleset/Unit.h \
	src/Ruleset/RuleBaseFacility.cpp \
	src/Ruleset/RuleBaseFacility.h \
	src/Ruleset/RuleCountry.cpp \
	src/Ruleset/RuleCountry.h \
	src/Ruleset/RuleCraft.cpp \
	src/Ruleset/RuleCraft.h \
	src/Ruleset/RuleCraftWeapon.cpp \
	src/Ruleset/RuleCraftWeapon.h \
	src/Ruleset/RuleInventory.cpp \
	src/Ruleset/RuleInventory.h \
	src/Ruleset/RuleItem.cpp \
	src/Ruleset/RuleItem.h \
	src/Ruleset/RuleManufacture.cpp \
	src/Ruleset/RuleManufacture.h \
	src/Ruleset/RuleResearch.cpp \
	src/Ruleset/RuleResearch.h \
	src/Ruleset/RuleRegion.cpp \
	src/Ruleset/RuleRegion.h \
	src/Ruleset/Ruleset.cpp \
	src/Ruleset/Ruleset.h \
	src/Ruleset/RuleSoldier.cpp \
	src/Ruleset/RuleSoldier.h \
	src/Ruleset/RuleTerrain.cpp \
	src/Ruleset/RuleTerrain.h \
	src/Ruleset/RuleUfo.cpp \
	src/Ruleset/RuleUfo.h \
	src/Ruleset/SoldierNamePool.cpp \
	src/Ruleset/SoldierNamePool.h \
	src/Savegame/Base.cpp \
	src/Savegame/BaseFacility.cpp \
	src/Savegame/BaseFacility.h \
	src/Savegame/Base.h \
	src/Savegame/BattleItem.cpp \
	src/Savegame/BattleItem.h \
	src/Savegame/BattleUnit.cpp \
	src/Savegame/BattleUnit.h \
	src/Savegame/Country.cpp \
	src/Savegame/Country.h \
	src/Savegame/Craft.cpp \
	src/Savegame/Craft.h \
	src/Savegame/CraftWeapon.cpp \
	src/Savegame/CraftWeapon.h \
	src/Savegame/CraftWeaponProjectile.cpp \
	src/Savegame/CraftWeaponProkectile.h \
	src/Savegame/GameTime.cpp \
	src/Savegame/GameTime.h \
	src/Savegame/ItemContainer.cpp \
	src/Savegame/ItemContainer.h \
	src/Savegame/MovingTarget.cpp \
	src/Savegame/MovingTarget.h \
	src/Savegame/Node.cpp \
	src/Savegame/Node.h \
	src/Savegame/NodeLink.cpp \
	src/Savegame/NodeLink.h \
	src/Savegame/Production.cpp \
	src/Savegame/Production.h \
	src/Savegame/Region.cpp \
	src/Savegame/Region.h \
	src/Savegame/ResearchProject.cpp \
	src/Savegame/ResearchProject.h \
	src/Savegame/SavedBattleGame.cpp \
	src/Savegame/SavedBattleGame.h \
	src/Savegame/SavedGame.cpp \
	src/Savegame/SavedGame.h \
	src/Savegame/Soldier.cpp \
	src/Savegame/Soldier.h \
	src/Savegame/Target.cpp \
	src/Savegame/Target.h \
	src/Savegame/TerrorSite.cpp \
	src/Savegame/TerrorSite.h \
	src/Savegame/Tile.cpp \
	src/Savegame/Tile.h \
	src/Savegame/Transfer.cpp \
	src/Savegame/Transfer.h \
	src/Savegame/Ufo.cpp \
	src/Savegame/Ufo.h \
	src/Savegame/Vehicle.cpp \
	src/Savegame/Vehicle.h \
	src/Savegame/Waypoint.cpp \
	src/Savegame/Waypoint.h \
	src/Ufopaedia/ArticleStateBaseFacility.cpp \
	src/Ufopaedia/ArticleStateBaseFacility.h \
	src/Ufopaedia/ArticleState.cpp \
	src/Ufopaedia/ArticleStateCraft.cpp \
	src/Ufopaedia/ArticleStateCraft.h \
	src/Ufopaedia/ArticleStateCraftWeapon.cpp \
	src/Ufopaedia/ArticleStateCraftWeapon.h \
	src/Ufopaedia/ArticleState.h \
	src/Ufopaedia/ArticleStateItem.cpp \
	src/Ufopaedia/ArticleStateItem.h \
	src/Ufopaedia/ArticleStateText.cpp \
	src/Ufopaedia/ArticleStateText.h \
	src/Ufopaedia/ArticleStateTextImage.cpp \
	src/Ufopaedia/ArticleStateTextImage.h \
	src/Ufopaedia/ArticleStateUfo.cpp \
	src/Ufopaedia/ArticleStateUfo.h \
	src/Ufopaedia/ArticleStateArmor.cpp \
	src/Ufopaedia/ArticleStateArmor.h \
	src/Ufopaedia/ArticleStateVehicle.cpp \
	src/Ufopaedia/ArticleStateVehicle.h \
	src/Ufopaedia/Ufopaedia.cpp \
	src/Ufopaedia/Ufopaedia.h \
	src/Ufopaedia/UfopaediaSelectState.cpp \
	src/Ufopaedia/UfopaediaSelectState.h \
	src/Ufopaedia/UfopaediaStartState.cpp \
	src/Ufopaedia/UfopaediaStartState.h

EXTRA_DIST = autogen.sh src/OpenXcom.* \
	src/CMakeLists.txt docs/CMakeLists.txt CMakeLists.txt cmake/* \
	$(doc_DATA) $(pkgdata_DATA) $(language_DATA) $(name_DATA)

dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.'; echo; \
		  $(top_srcdir)/missing --run git log ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
		     echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi

distclean-local: clean-local

clean-local:
	rm -rf *.tar.*
