AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = docs

doc_DATA = \
	README.md \
	CHANGELOG.txt \
	LICENSE.txt

if WITH_OPENXCOM_MAN

openxcom.6: $(srcdir)/docs/openxcom.6.xml
	$(XMLTO) man $<

dist_man_MANS = openxcom.6

endif

icondir = $(datadir)/pixmaps
icon_DATA = \
	res/openxcom.svg \
	res/openxcom.png

desktopdir = $(datadir)/applications
desktop_DATA = res/linux/openxcom.desktop

bin_PROGRAMS = openxcom
AM_CFLAGS=-std=c99
openxcom_LDADD = $(SDL_LIBS) $(YAML_LIBS) $(GL_LIBS)
openxcom_CXXFLAGS = \
	$(CXXFLAGS) \
	$(DEBUG_CFLAGS) \
	$(SDL_CFLAGS) \
	$(YAML_CFLAGS) \
	$(GL_CFLAGS) \
	-DDATADIR=\"$(pkgdatadir)/\"
openxcom_SOURCES = \
	src/Basescape/BaseInfoState.cpp \
	src/Basescape/BaseInfoState.h \
	src/Basescape/BaseView.cpp \
	src/Basescape/BaseView.h \
	src/Basescape/BasescapeState.cpp \
	src/Basescape/BasescapeState.h \
	src/Basescape/BuildFacilitiesState.cpp \
	src/Basescape/BuildFacilitiesState.h \
	src/Basescape/CraftArmorState.cpp \
	src/Basescape/CraftArmorState.h \
	src/Basescape/CraftEquipmentState.cpp \
	src/Basescape/CraftEquipmentState.h \
	src/Basescape/CraftInfoState.cpp \
	src/Basescape/CraftInfoState.h \
	src/Basescape/CraftSoldiersState.cpp \
	src/Basescape/CraftSoldiersState.h \
	src/Basescape/CraftWeaponsState.cpp \
	src/Basescape/CraftWeaponsState.h \
	src/Basescape/CraftsState.cpp \
	src/Basescape/CraftsState.h \
	src/Basescape/DismantleFacilityState.cpp \
	src/Basescape/DismantleFacilityState.h \
	src/Basescape/ManageAlienContainmentState.cpp \
	src/Basescape/ManageAlienContainmentState.h \
	src/Basescape/ManufactureInfoState.cpp \
	src/Basescape/ManufactureInfoState.h \
	src/Basescape/ManufactureStartState.cpp \
	src/Basescape/ManufactureStartState.h \
	src/Basescape/ManufactureState.cpp \
	src/Basescape/ManufactureState.h \
	src/Basescape/MiniBaseView.cpp \
	src/Basescape/MiniBaseView.h \
	src/Basescape/MonthlyCostsState.cpp \
	src/Basescape/MonthlyCostsState.h \
	src/Basescape/NewManufactureListState.cpp \
	src/Basescape/NewManufactureListState.h \
	src/Basescape/NewResearchListState.cpp \
	src/Basescape/NewResearchListState.h \
	src/Basescape/PlaceFacilityState.cpp \
	src/Basescape/PlaceFacilityState.h \
	src/Basescape/PlaceLiftState.cpp \
	src/Basescape/PlaceLiftState.h \
	src/Basescape/PlaceStartFacilityState.cpp \
	src/Basescape/PlaceStartFacilityState.h \
	src/Basescape/PurchaseState.cpp \
	src/Basescape/PurchaseState.h \
	src/Basescape/ResearchInfoState.cpp \
	src/Basescape/ResearchInfoState.h \
	src/Basescape/ResearchState.cpp \
	src/Basescape/ResearchState.h \
	src/Basescape/SackSoldierState.cpp \
	src/Basescape/SackSoldierState.h \
	src/Basescape/SelectStartFacilityState.cpp \
	src/Basescape/SelectStartFacilityState.h \
	src/Basescape/SellState.cpp \
	src/Basescape/SellState.h \
	src/Basescape/SoldierArmorState.cpp \
	src/Basescape/SoldierArmorState.h \
	src/Basescape/SoldierInfoState.cpp \
	src/Basescape/SoldierInfoState.h \
	src/Basescape/SoldierMemorialState.cpp \
	src/Basescape/SoldierMemorialState.h \
	src/Basescape/SoldiersState.cpp \
	src/Basescape/SoldiersState.h \
	src/Basescape/StoresState.cpp \
	src/Basescape/StoresState.h \
	src/Basescape/TransferBaseState.cpp \
	src/Basescape/TransferBaseState.h \
	src/Basescape/TransferConfirmState.cpp \
	src/Basescape/TransferConfirmState.h \
	src/Basescape/TransferItemsState.cpp \
	src/Basescape/TransferItemsState.h \
	src/Basescape/TransfersState.cpp \
	src/Basescape/TransfersState.h \
	src/Battlescape/AbortMissionState.cpp \
	src/Battlescape/AbortMissionState.h \
	src/Battlescape/ActionMenuItem.cpp \
	src/Battlescape/ActionMenuItem.h \
	src/Battlescape/ActionMenuState.cpp \
	src/Battlescape/ActionMenuState.h \
	src/Battlescape/AlienBAIState.cpp \
	src/Battlescape/AlienBAIState.h \
	src/Battlescape/AliensCrashState.cpp \
	src/Battlescape/AliensCrashState.h \
	src/Battlescape/BattleAIState.cpp \
	src/Battlescape/BattleAIState.h \
	src/Battlescape/BattleState.cpp \
	src/Battlescape/BattleState.h \
	src/Battlescape/BattlescapeGame.cpp \
	src/Battlescape/BattlescapeGame.h \
	src/Battlescape/BattlescapeGenerator.cpp \
	src/Battlescape/BattlescapeGenerator.h \
	src/Battlescape/BattlescapeMessage.cpp \
	src/Battlescape/BattlescapeMessage.h \
	src/Battlescape/BattlescapeState.cpp \
	src/Battlescape/BattlescapeState.h \
	src/Battlescape/BriefingState.cpp \
	src/Battlescape/BriefingState.h \
	src/Battlescape/Camera.cpp \
	src/Battlescape/Camera.h \
	src/Battlescape/CannotReequipState.cpp \
	src/Battlescape/CannotReequipState.h \
	src/Battlescape/CivilianBAIState.cpp \
	src/Battlescape/CivilianBAIState.h \
	src/Battlescape/DebriefingState.cpp \
	src/Battlescape/DebriefingState.h \
	src/Battlescape/Explosion.cpp \
	src/Battlescape/Explosion.h \
	src/Battlescape/ExplosionBState.cpp \
	src/Battlescape/ExplosionBState.h \
	src/Battlescape/InfoboxOKState.cpp \
	src/Battlescape/InfoboxOKState.h \
	src/Battlescape/InfoboxState.cpp \
	src/Battlescape/InfoboxState.h \
	src/Battlescape/Inventory.cpp \
	src/Battlescape/Inventory.h \
	src/Battlescape/InventoryState.cpp \
	src/Battlescape/InventoryState.h \
	src/Battlescape/Map.cpp \
	src/Battlescape/Map.h \
	src/Battlescape/MedikitState.cpp \
	src/Battlescape/MedikitState.h \
	src/Battlescape/MedikitView.cpp \
	src/Battlescape/MedikitView.h \
	src/Battlescape/MeleeAttackBState.cpp \
	src/Battlescape/MeleeAttackBState.h \
	src/Battlescape/MiniMapState.cpp \
	src/Battlescape/MiniMapState.h \
	src/Battlescape/MiniMapView.cpp \
	src/Battlescape/MiniMapView.h \
	src/Battlescape/NextTurnState.cpp \
	src/Battlescape/NextTurnState.h \
	src/Battlescape/NoContainmentState.cpp \
	src/Battlescape/NoContainmentState.h \
	src/Battlescape/Particle.cpp \
	src/Battlescape/Particle.h \
	src/Battlescape/Pathfinding.cpp \
	src/Battlescape/Pathfinding.h \
	src/Battlescape/PathfindingNode.cpp \
	src/Battlescape/PathfindingNode.h \
	src/Battlescape/PathfindingOpenSet.cpp \
	src/Battlescape/PathfindingOpenSet.h \
	src/Battlescape/Position.cpp \
	src/Battlescape/Position.h \
	src/Battlescape/PrimeGrenadeState.cpp \
	src/Battlescape/PrimeGrenadeState.h \
	src/Battlescape/Projectile.cpp \
	src/Battlescape/Projectile.h \
	src/Battlescape/ProjectileFlyBState.cpp \
	src/Battlescape/ProjectileFlyBState.h \
	src/Battlescape/PromotionsState.cpp \
	src/Battlescape/PromotionsState.h \
	src/Battlescape/PsiAttackBState.cpp \
	src/Battlescape/PsiAttackBState.h \
	src/Battlescape/ScannerState.cpp \
	src/Battlescape/ScannerState.h \
	src/Battlescape/ScannerView.cpp \
	src/Battlescape/ScannerView.h \
	src/Battlescape/TileEngine.cpp \
	src/Battlescape/TileEngine.h \
	src/Battlescape/UnitDieBState.cpp \
	src/Battlescape/UnitDieBState.h \
	src/Battlescape/UnitFallBState.cpp \
	src/Battlescape/UnitFallBState.h \
	src/Battlescape/UnitInfoState.cpp \
	src/Battlescape/UnitInfoState.h \
	src/Battlescape/UnitPanicBState.cpp \
	src/Battlescape/UnitPanicBState.h \
	src/Battlescape/UnitSprite.cpp \
	src/Battlescape/UnitSprite.h \
	src/Battlescape/UnitTurnBState.cpp \
	src/Battlescape/UnitTurnBState.h \
	src/Battlescape/UnitWalkBState.cpp \
	src/Battlescape/UnitWalkBState.h \
	src/Battlescape/WarningMessage.cpp \
	src/Battlescape/WarningMessage.h \
	src/Engine/Action.cpp \
	src/Engine/Action.h \
	src/Engine/Adlib/adlplayer.cpp \
	src/Engine/Adlib/adlplayer.h \
	src/Engine/Adlib/fmopl.cpp \
	src/Engine/Adlib/fmopl.h \
	src/Engine/AdlibMusic.cpp \
	src/Engine/AdlibMusic.h \
	src/Engine/CatFile.cpp \
	src/Engine/CatFile.h \
	src/Engine/CrossPlatform.cpp \
	src/Engine/CrossPlatform.h \
	src/Engine/DosFont.h \
	src/Engine/Exception.cpp \
	src/Engine/Exception.h \
	src/Engine/FastLineClip.cpp \
	src/Engine/FastLineClip.h \
	src/Engine/FileMap.cpp \
	src/Engine/FileMap.h \
	src/Engine/FlcPlayer.cpp \
	src/Engine/FlcPlayer.h \
	src/Engine/Font.cpp \
	src/Engine/Font.h \
	src/Engine/GMCat.cpp \
	src/Engine/GMCat.h \
	src/Engine/Game.cpp \
	src/Engine/Game.h \
	src/Engine/GraphSubset.h \
	src/Engine/InteractiveSurface.cpp \
	src/Engine/InteractiveSurface.h \
	src/Engine/Language.cpp \
	src/Engine/Language.h \
	src/Engine/LanguagePlurality.cpp \
	src/Engine/LanguagePlurality.h \
	src/Engine/LocalizedText.cpp \
	src/Engine/LocalizedText.h \
	src/Engine/Logger.h \
	src/Engine/ModInfo.cpp \
	src/Engine/ModInfo.h \
	src/Engine/Music.cpp \
	src/Engine/Music.h \
	src/Engine/OpenGL.cpp \
	src/Engine/OpenGL.h \
	src/Engine/OptionInfo.cpp \
	src/Engine/OptionInfo.h \
	src/Engine/Options.cpp \
	src/Engine/Options.h \
	src/Engine/Options.inc.h \
	src/Engine/Palette.cpp \
	src/Engine/Palette.h \
	src/Engine/RNG.cpp \
	src/Engine/RNG.h \
	src/Engine/Scalers/common.h \
	src/Engine/Scalers/config.h \
	src/Engine/Scalers/hq2x.cpp \
	src/Engine/Scalers/hq3x.cpp \
	src/Engine/Scalers/hq4x.cpp \
	src/Engine/Scalers/hqx.h \
	src/Engine/Scalers/init.cpp \
	src/Engine/Scalers/scale2x.cpp \
	src/Engine/Scalers/scale2x.h \
	src/Engine/Scalers/scale3x.cpp \
	src/Engine/Scalers/scale3x.h \
	src/Engine/Scalers/scalebit.cpp \
	src/Engine/Scalers/scalebit.h \
	src/Engine/Scalers/xbrz.cpp \
	src/Engine/Scalers/xbrz.h \
	src/Engine/Screen.cpp \
	src/Engine/Screen.h \
	src/Engine/ShaderDraw.h \
	src/Engine/ShaderDrawHelper.h \
	src/Engine/ShaderMove.h \
	src/Engine/ShaderRepeat.h \
	src/Engine/Sound.cpp \
	src/Engine/Sound.h \
	src/Engine/SoundSet.cpp \
	src/Engine/SoundSet.h \
	src/Engine/State.cpp \
	src/Engine/State.h \
	src/Engine/Surface.cpp \
	src/Engine/Surface.h \
	src/Engine/SurfaceSet.cpp \
	src/Engine/SurfaceSet.h \
	src/Engine/Timer.cpp \
	src/Engine/Timer.h \
	src/Engine/Zoom.cpp \
	src/Engine/Zoom.h \
	src/Geoscape/AlienBaseState.cpp \
	src/Geoscape/AlienBaseState.h \
	src/Geoscape/AllocatePsiTrainingState.cpp \
	src/Geoscape/AllocatePsiTrainingState.h \
	src/Geoscape/BaseDefenseState.cpp \
	src/Geoscape/BaseDefenseState.h \
	src/Geoscape/BaseDestroyedState.cpp \
	src/Geoscape/BaseDestroyedState.h \
	src/Geoscape/BaseNameState.cpp \
	src/Geoscape/BaseNameState.h \
	src/Geoscape/BuildNewBaseState.cpp \
	src/Geoscape/BuildNewBaseState.h \
	src/Geoscape/ConfirmCydoniaState.cpp \
	src/Geoscape/ConfirmCydoniaState.h \
	src/Geoscape/ConfirmDestinationState.cpp \
	src/Geoscape/ConfirmDestinationState.h \
	src/Geoscape/ConfirmLandingState.cpp \
	src/Geoscape/ConfirmLandingState.h \
	src/Geoscape/ConfirmNewBaseState.cpp \
	src/Geoscape/ConfirmNewBaseState.h \
	src/Geoscape/Cord.h \
	src/Geoscape/CraftErrorState.cpp \
	src/Geoscape/CraftErrorState.h \
	src/Geoscape/CraftPatrolState.cpp \
	src/Geoscape/CraftPatrolState.h \
	src/Geoscape/DefeatState.cpp \
	src/Geoscape/DefeatState.h \
	src/Geoscape/DogfightState.cpp \
	src/Geoscape/DogfightState.h \
	src/Geoscape/FundingState.cpp \
	src/Geoscape/FundingState.h \
	src/Geoscape/GeoscapeCraftState.cpp \
	src/Geoscape/GeoscapeCraftState.h \
	src/Geoscape/GeoscapeState.cpp \
	src/Geoscape/GeoscapeState.h \
	src/Geoscape/Globe.cpp \
	src/Geoscape/Globe.h \
	src/Geoscape/GraphsState.cpp \
	src/Geoscape/GraphsState.h \
	src/Geoscape/InterceptState.cpp \
	src/Geoscape/InterceptState.h \
	src/Geoscape/ItemsArrivingState.cpp \
	src/Geoscape/ItemsArrivingState.h \
	src/Geoscape/LowFuelState.cpp \
	src/Geoscape/LowFuelState.h \
	src/Geoscape/MissionDetectedState.cpp \
	src/Geoscape/MissionDetectedState.h \
	src/Geoscape/MonthlyReportState.cpp \
	src/Geoscape/MonthlyReportState.h \
	src/Geoscape/MultipleTargetsState.cpp \
	src/Geoscape/MultipleTargetsState.h \
	src/Geoscape/NewPossibleManufactureState.cpp \
	src/Geoscape/NewPossibleManufactureState.h \
	src/Geoscape/NewPossibleResearchState.cpp \
	src/Geoscape/NewPossibleResearchState.h \
	src/Geoscape/ProductionCompleteState.cpp \
	src/Geoscape/ProductionCompleteState.h \
	src/Geoscape/PsiTrainingState.cpp \
	src/Geoscape/PsiTrainingState.h \
	src/Geoscape/ResearchCompleteState.cpp \
	src/Geoscape/ResearchCompleteState.h \
	src/Geoscape/ResearchRequiredState.cpp \
	src/Geoscape/ResearchRequiredState.h \
	src/Geoscape/SelectDestinationState.cpp \
	src/Geoscape/SelectDestinationState.h \
	src/Geoscape/TargetInfoState.cpp \
	src/Geoscape/TargetInfoState.h \
	src/Geoscape/UfoDetectedState.cpp \
	src/Geoscape/UfoDetectedState.h \
	src/Geoscape/UfoLostState.cpp \
	src/Geoscape/UfoLostState.h \
	src/Geoscape/VictoryState.cpp \
	src/Geoscape/VictoryState.h \
	src/Interface/ArrowButton.cpp \
	src/Interface/ArrowButton.h \
	src/Interface/Bar.cpp \
	src/Interface/Bar.h \
	src/Interface/BattlescapeButton.cpp \
	src/Interface/BattlescapeButton.h \
	src/Interface/ComboBox.cpp \
	src/Interface/ComboBox.h \
	src/Interface/Cursor.cpp \
	src/Interface/Cursor.h \
	src/Interface/FpsCounter.cpp \
	src/Interface/FpsCounter.h \
	src/Interface/Frame.cpp \
	src/Interface/Frame.h \
	src/Interface/ImageButton.cpp \
	src/Interface/ImageButton.h \
	src/Interface/NumberText.cpp \
	src/Interface/NumberText.h \
	src/Interface/ScrollBar.cpp \
	src/Interface/ScrollBar.h \
	src/Interface/Slider.cpp \
	src/Interface/Slider.h \
	src/Interface/Text.cpp \
	src/Interface/Text.h \
	src/Interface/TextButton.cpp \
	src/Interface/TextButton.h \
	src/Interface/TextEdit.cpp \
	src/Interface/TextEdit.h \
	src/Interface/TextList.cpp \
	src/Interface/TextList.h \
	src/Interface/ToggleTextButton.cpp \
	src/Interface/ToggleTextButton.h \
	src/Interface/Window.cpp \
	src/Interface/Window.h \
	src/Menu/AbandonGameState.cpp \
	src/Menu/AbandonGameState.h \
	src/Menu/ConfirmLoadState.cpp \
	src/Menu/ConfirmLoadState.h \
	src/Menu/DeleteGameState.cpp \
	src/Menu/DeleteGameState.h \
	src/Menu/ErrorMessageState.cpp \
	src/Menu/ErrorMessageState.h \
	src/Menu/IntroState.cpp \
	src/Menu/IntroState.h \
	src/Menu/ListGamesState.cpp \
	src/Menu/ListGamesState.h \
	src/Menu/ListLoadOriginalState.cpp \
	src/Menu/ListLoadOriginalState.h \
	src/Menu/ListLoadState.cpp \
	src/Menu/ListLoadState.h \
	src/Menu/ListSaveState.cpp \
	src/Menu/ListSaveState.h \
	src/Menu/LoadGameState.cpp \
	src/Menu/LoadGameState.h \
	src/Menu/MainMenuState.cpp \
	src/Menu/MainMenuState.h \
	src/Menu/NewBattleState.cpp \
	src/Menu/NewBattleState.h \
	src/Menu/NewGameState.cpp \
	src/Menu/NewGameState.h \
	src/Menu/OptionsAdvancedState.cpp \
	src/Menu/OptionsAdvancedState.h \
	src/Menu/OptionsAudioState.cpp \
	src/Menu/OptionsAudioState.h \
	src/Menu/OptionsBaseState.cpp \
	src/Menu/OptionsBaseState.h \
	src/Menu/OptionsBattlescapeState.cpp \
	src/Menu/OptionsBattlescapeState.h \
	src/Menu/OptionsConfirmState.cpp \
	src/Menu/OptionsConfirmState.h \
	src/Menu/OptionsControlsState.cpp \
	src/Menu/OptionsControlsState.h \
	src/Menu/OptionsDefaultsState.cpp \
	src/Menu/OptionsDefaultsState.h \
	src/Menu/OptionsGeoscapeState.cpp \
	src/Menu/OptionsGeoscapeState.h \
	src/Menu/OptionsModsState.cpp \
	src/Menu/OptionsModsState.h \
	src/Menu/OptionsNoAudioState.cpp \
	src/Menu/OptionsNoAudioState.h \
	src/Menu/OptionsVideoState.cpp \
	src/Menu/OptionsVideoState.h \
	src/Menu/PauseState.cpp \
	src/Menu/PauseState.h \
	src/Menu/SaveGameState.cpp \
	src/Menu/SaveGameState.h \
	src/Menu/StartState.cpp \
	src/Menu/StartState.h \
	src/Menu/TestState.cpp \
	src/Menu/TestState.h \
	src/Resource/ResourcePack.cpp \
	src/Resource/ResourcePack.h \
	src/Resource/XcomResourcePack.cpp \
	src/Resource/XcomResourcePack.h \
	src/Ruleset/AlienDeployment.cpp \
	src/Ruleset/AlienDeployment.h \
	src/Ruleset/AlienRace.cpp \
	src/Ruleset/AlienRace.h \
	src/Ruleset/Armor.cpp \
	src/Ruleset/Armor.h \
	src/Ruleset/ArticleDefinition.cpp \
	src/Ruleset/ArticleDefinition.h \
	src/Ruleset/City.cpp \
	src/Ruleset/City.h \
	src/Ruleset/ExtraSounds.cpp \
	src/Ruleset/ExtraSounds.h \
	src/Ruleset/ExtraSprites.cpp \
	src/Ruleset/ExtraSprites.h \
	src/Ruleset/ExtraStrings.cpp \
	src/Ruleset/ExtraStrings.h \
	src/Ruleset/MCDPatch.cpp \
	src/Ruleset/MCDPatch.h \
	src/Ruleset/MapBlock.cpp \
	src/Ruleset/MapBlock.h \
	src/Ruleset/MapData.cpp \
	src/Ruleset/MapData.h \
	src/Ruleset/MapDataSet.cpp \
	src/Ruleset/MapDataSet.h \
	src/Ruleset/MapScript.cpp \
	src/Ruleset/MapScript.h \
	src/Ruleset/Polygon.cpp \
	src/Ruleset/Polygon.h \
	src/Ruleset/Polyline.cpp \
	src/Ruleset/Polyline.h \
	src/Ruleset/RuleAlienMission.cpp \
	src/Ruleset/RuleAlienMission.h \
	src/Ruleset/RuleBaseFacility.cpp \
	src/Ruleset/RuleBaseFacility.h \
	src/Ruleset/RuleCountry.cpp \
	src/Ruleset/RuleCountry.h \
	src/Ruleset/RuleCraft.cpp \
	src/Ruleset/RuleCraft.h \
	src/Ruleset/RuleCraftWeapon.cpp \
	src/Ruleset/RuleCraftWeapon.h \
	src/Ruleset/RuleGlobe.cpp \
	src/Ruleset/RuleGlobe.h \
	src/Ruleset/RuleInterface.cpp \
	src/Ruleset/RuleInterface.h \
	src/Ruleset/RuleInventory.cpp \
	src/Ruleset/RuleInventory.h \
	src/Ruleset/RuleItem.cpp \
	src/Ruleset/RuleItem.h \
	src/Ruleset/RuleManufacture.cpp \
	src/Ruleset/RuleManufacture.h \
	src/Ruleset/RuleMusic.cpp \
	src/Ruleset/RuleMusic.h \
	src/Ruleset/RuleRegion.cpp \
	src/Ruleset/RuleRegion.h \
	src/Ruleset/RuleResearch.cpp \
	src/Ruleset/RuleResearch.h \
	src/Ruleset/RuleSoldier.cpp \
	src/Ruleset/RuleSoldier.h \
	src/Ruleset/RuleTerrain.cpp \
	src/Ruleset/RuleTerrain.h \
	src/Ruleset/RuleUfo.cpp \
	src/Ruleset/RuleUfo.h \
	src/Ruleset/RuleVideo.cpp \
	src/Ruleset/RuleVideo.h \
	src/Ruleset/Ruleset.cpp \
	src/Ruleset/Ruleset.h \
	src/Ruleset/SoldierNamePool.cpp \
	src/Ruleset/SoldierNamePool.h \
	src/Ruleset/SoundDefinition.cpp \
	src/Ruleset/SoundDefinition.h \
	src/Ruleset/StatString.cpp \
	src/Ruleset/StatString.h \
	src/Ruleset/StatStringCondition.cpp \
	src/Ruleset/StatStringCondition.h \
	src/Ruleset/Texture.cpp \
	src/Ruleset/Texture.h \
	src/Ruleset/UfoTrajectory.cpp \
	src/Ruleset/UfoTrajectory.h \
	src/Ruleset/Unit.cpp \
	src/Ruleset/Unit.h \
	src/Savegame/AlienBase.cpp \
	src/Savegame/AlienBase.h \
	src/Savegame/AlienMission.cpp \
	src/Savegame/AlienMission.h \
	src/Savegame/AlienStrategy.cpp \
	src/Savegame/AlienStrategy.h \
	src/Savegame/Base.cpp \
	src/Savegame/Base.h \
	src/Savegame/BaseFacility.cpp \
	src/Savegame/BaseFacility.h \
	src/Savegame/BattleItem.cpp \
	src/Savegame/BattleItem.h \
	src/Savegame/BattleUnit.cpp \
	src/Savegame/BattleUnit.h \
	src/Savegame/Country.cpp \
	src/Savegame/Country.h \
	src/Savegame/Craft.cpp \
	src/Savegame/Craft.h \
	src/Savegame/CraftId.h \
	src/Savegame/CraftWeapon.cpp \
	src/Savegame/CraftWeapon.h \
	src/Savegame/CraftWeaponProjectile.cpp \
	src/Savegame/CraftWeaponProjectile.h \
	src/Savegame/EquipmentLayoutItem.cpp \
	src/Savegame/EquipmentLayoutItem.h \
	src/Savegame/GameTime.cpp \
	src/Savegame/GameTime.h \
	src/Savegame/ItemContainer.cpp \
	src/Savegame/ItemContainer.h \
	src/Savegame/MissionSite.cpp \
	src/Savegame/MissionSite.h \
	src/Savegame/MovingTarget.cpp \
	src/Savegame/MovingTarget.h \
	src/Savegame/Node.cpp \
	src/Savegame/Node.h \
	src/Savegame/Production.cpp \
	src/Savegame/Production.h \
	src/Savegame/Region.cpp \
	src/Savegame/Region.h \
	src/Savegame/ResearchProject.cpp \
	src/Savegame/ResearchProject.h \
	src/Savegame/SaveConverter.cpp \
	src/Savegame/SaveConverter.h \
	src/Savegame/SaveConverterXcom1.h \
	src/Savegame/SavedBattleGame.cpp \
	src/Savegame/SavedBattleGame.h \
	src/Savegame/SavedGame.cpp \
	src/Savegame/SavedGame.h \
	src/Savegame/SerializationHelper.cpp \
	src/Savegame/SerializationHelper.h \
	src/Savegame/Soldier.cpp \
	src/Savegame/Soldier.h \
	src/Savegame/SoldierDeath.cpp \
	src/Savegame/SoldierDeath.h \
	src/Savegame/Target.cpp \
	src/Savegame/Target.h \
	src/Savegame/Tile.cpp \
	src/Savegame/Tile.h \
	src/Savegame/Transfer.cpp \
	src/Savegame/Transfer.h \
	src/Savegame/Ufo.cpp \
	src/Savegame/Ufo.h \
	src/Savegame/Vehicle.cpp \
	src/Savegame/Vehicle.h \
	src/Savegame/Waypoint.cpp \
	src/Savegame/Waypoint.h \
	src/Savegame/WeightedOptions.cpp \
	src/Savegame/WeightedOptions.h \
	src/Ufopaedia/ArticleState.cpp \
	src/Ufopaedia/ArticleState.h \
	src/Ufopaedia/ArticleStateArmor.cpp \
	src/Ufopaedia/ArticleStateArmor.h \
	src/Ufopaedia/ArticleStateBaseFacility.cpp \
	src/Ufopaedia/ArticleStateBaseFacility.h \
	src/Ufopaedia/ArticleStateCraft.cpp \
	src/Ufopaedia/ArticleStateCraft.h \
	src/Ufopaedia/ArticleStateCraftWeapon.cpp \
	src/Ufopaedia/ArticleStateCraftWeapon.h \
	src/Ufopaedia/ArticleStateItem.cpp \
	src/Ufopaedia/ArticleStateItem.h \
	src/Ufopaedia/ArticleStateTFTD.cpp \
	src/Ufopaedia/ArticleStateTFTD.h \
	src/Ufopaedia/ArticleStateTFTDArmor.cpp \
	src/Ufopaedia/ArticleStateTFTDArmor.h \
	src/Ufopaedia/ArticleStateTFTDCraft.cpp \
	src/Ufopaedia/ArticleStateTFTDCraft.h \
	src/Ufopaedia/ArticleStateTFTDCraftWeapon.cpp \
	src/Ufopaedia/ArticleStateTFTDCraftWeapon.h \
	src/Ufopaedia/ArticleStateTFTDFacility.cpp \
	src/Ufopaedia/ArticleStateTFTDFacility.h \
	src/Ufopaedia/ArticleStateTFTDItem.cpp \
	src/Ufopaedia/ArticleStateTFTDItem.h \
	src/Ufopaedia/ArticleStateTFTDUso.cpp \
	src/Ufopaedia/ArticleStateTFTDUso.h \
	src/Ufopaedia/ArticleStateTFTDVehicle.cpp \
	src/Ufopaedia/ArticleStateTFTDVehicle.h \
	src/Ufopaedia/ArticleStateText.cpp \
	src/Ufopaedia/ArticleStateText.h \
	src/Ufopaedia/ArticleStateTextImage.cpp \
	src/Ufopaedia/ArticleStateTextImage.h \
	src/Ufopaedia/ArticleStateUfo.cpp \
	src/Ufopaedia/ArticleStateUfo.h \
	src/Ufopaedia/ArticleStateVehicle.cpp \
	src/Ufopaedia/ArticleStateVehicle.h \
	src/Ufopaedia/Ufopaedia.cpp \
	src/Ufopaedia/Ufopaedia.h \
	src/Ufopaedia/UfopaediaSelectState.cpp \
	src/Ufopaedia/UfopaediaSelectState.h \
	src/Ufopaedia/UfopaediaStartState.cpp \
	src/Ufopaedia/UfopaediaStartState.h \
	src/dirent.h \
	src/fmath.h \
	src/lodepng.cpp \
	src/lodepng.h \
	src/main.cpp \
	src/pch.cpp \
	src/pch.h \
	src/resource.h \
	src/version.h

EXTRA_DIST = \
	autogen.sh \
	bin/TFTD \
	bin/UFO \
	bin/common \
	bin/standard \
	docs/openxcom.6.xml \
	src/OpenXcom.2010.sln \
	src/OpenXcom.2010.vcxproj \
	src/OpenXcom.2010.vcxproj.filters \
	src/OpenXcom.2010.vcxproj.user \
	src/CMakeLists.txt docs/CMakeLists.txt CMakeLists.txt \
	cmake/modules/apple.cmake \
	cmake/modules/deb.cmake \
	cmake/modules/FindSDL_gfx.cmake \
	cmake/modules/FindSDL2.cmake \
	cmake/modules/FindYaml_cpp.cmake \
	cmake/modules/nsis.cmake \
	cmake/modules/NSIS.template.in \
	cmake/modules/rpm.cmake \
	res/mac/AppIcon.icns \
	res/linux/icons/openxcom_128x128.png \
	res/linux/icons/openxcom.svg \
	res/linux/icons/openxcom_48x48.png \
	res/windows/openxcom.ico \
	$(doc_DATA) \
	$(desktop_DATA) \
	$(icon_DATA)

dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.'; echo; \
		  $(top_srcdir)/missing --run git log ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
		     echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi

install-data-local:
	@mkdir -p $(DESTDIR)$(pkgdatadir)/data; \
	cp -r $(top_srcdir)/bin/data/* $(DESTDIR)$(pkgdatadir)/data/ ; \
	find $(DESTDIR)$(pkgdatadir) | xargs chmod a=rX,u+w

# NOTE: this might wipe user unpacked xcom if it is in the dir, as there
#       is no way of distinguishing between our content and their.
#       If user uses distro package or if he does not use uninstall
#       command this won't of course happen.
uninstall-local:
	@find $(DESTDIR)$(pkgdatadir) -type f -exec rm -rf {} +

distclean-local: clean-local

clean-local:
	rm -rf *.tar.*
