add_subdirectory(zlib)
add_subdirectory(jpeglib)
message(STATUS " LibPNG Configure: ")
add_subdirectory(libpng)
message(STATUS " LibTIFF Configure: ")
add_subdirectory(libtiff)
message(STATUS " SDL2 Configure: ")
add_subdirectory(SDL2)
add_subdirectory(SDL_GFX) #SDL2_gfx)
add_subdirectory(SDL2_image)
add_subdirectory(SDL2_mixer)
message(STATUS " YAML Configure: ")
add_subdirectory(YAML)
